Version 2.1.61
    Fixed the locale string formatting of 'Mining.SubSkill.DoubleDrops.Stat'
    Updated the Japanese locale (thanks snake0053)
    Added toggle to turn off event message broadcasts (XP rate) to config.yml - 'General.EventBroadcasts'
    Added toggle to not inform players of events when they join (XP rate, etc) to config.yml 'General.EventInfoOnPlayerJoin'

    NOTE: The toggle for event message broadcasts is separate from the titles being shown, that's another config option (titles are the BIG TEXT in the middle of the screen)

Version 2.1.60
    Fixed a NPE error if a LivingEntity's target was set to null
    Fixed a bug where tamed mobs could kill themselves if their owner shot them once
    Corrected a typo when naming entities summoned by COTW (Locale string - Taming.Summon.Name.Format)
    Fixed a bug where tamed mobs could have hearts instead of their name in their own death messages
    Fixed a bug where multi-block crops would fail to double/triple drop (Sugar Cane, Cactus, etc)
    Optimized the bonus drop code to reduce overhead

Version 2.1.59
    Raised the overfishing limit from 3 to 10
    Improved the overfishing messages to be more clear about its mechanics
    Overfishing locale keys renamed "Fishing.ScarcityTip" and "Fishing.LowResourcesTip"

    NOTES: This and other exploit prevention measures are much more customizable in 2.2, which shouldn't be too far off.

Version 2.1.58
    Fixed the wrong locale string being used for Mining Double Drops

Version 2.1.57
    Fixed an incredibly rare dupe bug that only happened with VERY specific config options that was extremely difficult to pull off

Version 2.1.56
    Very large update to the zh_CN Chinese language file (thanks Dream_m)

Version 2.1.55
    Fixed a bug that could occur when adding UUIDs to old outdated DBs

Version 2.1.54
    Fixed a bug where the Skill 'Understanding the Art' was preventing vanilla experience orbs from furnaces